@@ -76,7 +76,8 @@ lightdm_CFLAGS = \
 	-DRUN_DIR=\"$(localstatedir)/run/lightdm\" \
 	-DCACHE_DIR=\"$(localstatedir)/cache/lightdm\" \
 	-DLOG_DIR=\"$(localstatedir)/log/lightdm\" \
-	-DXSESSIONS_DIR=\"$(datadir)/xsessions\"
+	-DXSESSIONS_DIR=\"$(datadir)/xsessions\" \
+	-DXGREETERS_DIR=\"$(datadir)/xgreeters\"
 
 lightdm_LDADD = \
 	$(LIGHTDM_LIBS) \
