@@ -3,7 +3,8 @@ Overview of changes in lightdm 0.9.0
     * Fix invalid XAUTHORITY variable being set for second X server.
     * Fix bug where switching users created X servers without VTs
     * Release a VT when the X server on it stops
-    * Greeters are now just standard X sessions
+    * Greeters are now just standard X sessions that are stored in
+      /usr/share/xgreeters.
     * Drop most of the configure options, they aren't necessary
     * Config changes:
       - Major reorginisation of configuration to make it easier to configure and
